Feature #334: Submit gLite and Dirac with specific user proxy